<resources>
    <string name="app_name">ElektroPolnepMobile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sejarah">sejarah</string>
    <string name="visi_misi">visi_misi</string>
    <string name="dosen">dosen</string>
    <string name="fasilitas">fasilitas</string>
    <string name="staff">staff</string>
    <string name="prodi">prodi</string>
    <string name="card_tittle">Card Tittle</string>
    <string name="card_image">Card Image</string>
    <string name="app_bar_tittle">App Bar Tittle</string>
    <string name="profil_dosen">Profil Dosen</string>
    <string name="profil_staff">Profil Staff</string>
    <string name="nama">Nama</string>
    <string name="text_sejarah">Jurusan Teknik Elektro didirikan pada tahun akademik 1988/1989 dengan jenjang pendidikan Program Diploma Dua (D-2).\n\nPada awalnya Politeknik Negeri Pontianak (POLNEP) sebelum mandiri pada tahun 1998 bernama Politeknik Universitas Tanjungpura (Politeknik UNTAN) yang pengelolaannya berada di bawah Universitas Tanjungpura.\n\nPada tahun ajaran 1998/1999 program pendidikan jurusan Teknik Elektro ditingkatkan menjadi Diploma Tiga (D-3) berdasarkan Surat Keputusan Direktur Jenderal Pendidikan Tinggi Nomor: 233/DIKTI/KEP/2000 tanggal 17 Juli 2000.\n\nJurusan Teknik Elektro saat ini mempunyai 3 Program Studi, yaitu Program Studi Teknik Listrik (ELT), Program Studi Teknik Elektronika (ELC), dan Program Studi Teknik Informatika (TIF).\n\nOperasional Program Studi Teknik Listrik berdasarkan Surat Keputusan Ijin Penyelenggaraan No.233/DIKTI/Kep/2000 Tanggal 17 Juli 2000 (perpanjangan). Saat ini Prodi Teknik Listrik menyandang status Akreditasi B berdasarkan SK BAN-PT No. 1145/SK/BAN-PT/Akred/Dipl-III/V/2018 Tanggal 02 Mei 2018.</string>
    <string name="text_visi_misi"><b><big>VISI</big></b>\nMenjadi penyelenggara pendidikan vokasi unggul di bidang Teknik Elektro yang mengacu pada Kerangka Kualifikasi Nasional Indonesia (KKNI)\nguna menghasilkan lulusan yang memenuhi kriteria standar kebutuhan pangsa kerja dan kepercayaan pihak eksternal.\n\n<b><big>MISI</big></b>\n1. Menguatkan akhlak luhur, etos kerja, kemandirian serta sikap profesional bagi segenap sivitas akademika.\n2. Menciptakan atmosfer akademika yang baik bagi segenap sivitas akademika dalam setiap sendi Tri Dharma Perguruan Tinggi.\n3. Menciptakan peluang bagi sinergitas program studi dalam rangka penguatan potensi diri Jurusan Teknik Elektro\nsesuai visi lembaga Politeknik Negeri Pontianak.</string>
    <string name="teknik_listrik">Listrik</string>
    <string name="teknik_elektronika">Elektronika</string>
    <string name="teknik_informatika">Infromatika</string>
    <string name="text_prodi_listrik"><b><big>Program Studi Teknik Listrik (1988 - sekarang)</big></b>\n\nProgram Studi (prodi) Teknik Listrik berdiri pada tahun 1988 dengan jenjang pendidikan Diploma II, dan pada tahun 1998 ditingkatkan menjadi Diploma III.\nUntuk izin operasional penyelenggaraan prodi berdasarkan SK No 233/DIKTI/Kep/2000, tanggal 17 Juli 2000.\n\nPendirian Prodi Teknik Listrik didasarkan pada aspek pemenuhan kebutuhan tenaga kerja di bidang kelistrikan pada level ahli madya,\nterutama untuk menunjang industri pertanian, kelautan, kehutanan, perdagangan, rekayasa, dan jasa pelayanan energi tenaga listrik.\n\nSampai dengan tahun 2004, Prodi Teknik Listrik telah memiliki alumni lebih dari 600 lulusan,\nyang tersebar di berbagai industri dan instansi pemerintah maupun swasta, baik lokal maupun nasional.</string>
    <string name="text_prodi_elektronika"><b><big>Program Studi Teknik Elektronika (2006 - sekarang)</big></b> \n\nProgram Studi (Prodi) Teknik Elektronika telah beroperasional sejak tahun 2006.\nUntuk izin penyelenggaraan prodi berdasarkan SK No. 935/D/T/2007, tanggal 20 April 2007.\n\nElektronika merupakan salah satu bidang keilmuan yang sangat luas dan pesat perkembangannya,\ndimulai dari: Sistem kontrol, Consumer Electronics (Televisi, VCD, dan lain-lain),\nInformation System (telekomunikasi dan komputer), serta masih banyak bidang lainnya.\n\nSehingga dengan dibukanya Program Studi baru yaitu Program Studi Teknik Elektronika\ndi bawah Jurusan Teknik Elektro yang merupakan satu-satunya Program Studi yang ada di Kalimantan Barat,\ndiharapkan dapat meningkatkan potensi dan berperan aktif untuk memenuhi kebutuhan tenaga kerja\nterampil di Kalimantan Barat.\n\nKurikulum yang diterapkan pada Program Studi Teknik Elektronika didesain berdasarkan bidang profesi\nyang ada di industri, yang dikenal dengan istilah Kurikulum Berbasis Kompetensi Profesi,\nserta didukung dengan fasilitas bengkel dan laboratorium yang lengkap dan up to date.\n\nBerdasarkan Surat Keputusan Badan Akreditasi Nasional Perguruan Tinggi\nDepartemen Pendidikan dan Kebudayaan Republik Indonesia Nomor 4396/SK/BAN-PT/Akred/Dip-III/XI/2017,\ntanggal 14 November 2017, Prodi Teknik Elektronika telah mendapat sertifikat akreditasi\ndengan peringkat “B”.</string>
    <string name="text_prodi_informatika"><b><big>Program Studi Teknik Informatika (2009 - sekarang)</big></b>\n\nSeiring dengan kemajuan dan perkembangan Teknologi Informasi dan Komunikasi (TIK) di Indonesia pada umumnya dan Kalimantan Barat pada khususnya,\nserta dalam menghadapi ASEAN Free Trade Area (AFTA), tentunya memerlukan sumber daya manusia yang mempunyai kompetensi sesuai dengan bidangnya masing-masing.\n\nPendidikan merupakan salah satu solusi yang diperlukan untuk mencetak SDM yang handal dan berkompeten,\ndidukung dengan perilaku yang bijak, santun, serta berkualitas.\n\nUntuk memenuhi permintaan dan kebutuhan masyarakat terhadap perkembangan Teknologi Informasi dan Komunikasi,\nmaka berbekal pengalaman kerja sama dengan Kementerian Pendidikan Nasional dalam melaksanakan\nPendidikan Program Beasiswa Unggulan Diploma/Training Teknisi Jardiknas di Politeknik Negeri Pontianak,\ndengan nama pendidikan program Diploma Tiga (D-3) Teknik Komputer dan Jaringan.\nProgram ini telah menghasilkan lulusan siap pakai terutama untuk memelihara dan mengembangkan JARDIKNAS di Indonesia pada umumnya\ndan Kalimantan Barat pada khususnya.\n\nProgram Studi (Prodi) Teknik Informatika mulai beroperasi pada tahun 2009 dengan jenjang pendidikan Diploma III,\ndengan izin operasional penyelenggaraan prodi berdasarkan SK Nomor 898/D/T/2009, tanggal 11 Juni 2009.</string>
    <string name="nip">Nip</string>
    <string name="keterangan">Keterangan</string>
    <string name="nama_fasilitas">Nama Fasilitas</string>


</resources>