<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.staffScreen.MenuStaffActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/navy_blue"
        app:titleCentered="true"
        app:title="@string/app_bar_tittle"
        app:titleTextColor="@color/white"
        app:titleTextAppearance="@style/TextAppearance.BebasNeue"
        app:navigationIcon="@drawable/ic_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/menuGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        app:alignmentMode="alignMargins"
        app:columnCount="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        app:rowCount="3"
        app:useDefaultMargins="true">

        <!-- Menu-item -->
        <androidx.cardview.widget.CardView
            android:id="@+id/listrikBtn"
            android:layout_width="160dp"
            android:layout_height="160dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            android:foreground="?attr/selectableItemBackground"
            android:backgroundTint="@color/red">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/lightning"
                    android:contentDescription="@string/card_image" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/teknik_listrik"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/bebas_neue" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Menu-item -->
        <androidx.cardview.widget.CardView
            android:id="@+id/elektronikaBtn"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="160dp"
            android:layout_height="160dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            android:backgroundTint="@color/red">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/circuit"
                    android:contentDescription="@string/card_image" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/teknik_elektronika"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/bebas_neue" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Menu-item -->
        <androidx.cardview.widget.CardView
            android:id="@+id/informatikaBtn"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="160dp"
            android:layout_height="160dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            android:backgroundTint="@color/red">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/informatics"
                    android:contentDescription="@string/card_image" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/teknik_informatika"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/bebas_neue" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>